--- a/settings/project.json
+++ b/settings/project.json
@@ -31,6 +31,14 @@
       false,
       false,
       false
+    ],
+    [
+      false,
+      false,
+      false,
+      false,
+      false,
+      false
     ]
   ],
   "design-resolution-height": 640,
@@ -53,7 +61,8 @@
     "hero",
     "ground",
     "enemy",
-    "game"
+    "game",
+    "background"
   ],
   "last-module-event-record-time": 1568967833680,
   "simulator-orientation": false,
@@ -61,7 +70,6 @@
     "height": 640,
     "width": 960
   },
-  "start-scene": "current",
   "use-customize-simulator": true,
   "use-project-simulator-setting": false
 }
