--- a/settings/project.json
+++ b/settings/project.json
@@ -64,12 +64,13 @@
     "game",
     "background"
   ],
-  "last-module-event-record-time": 1568967833680,
+  "last-module-event-record-time": 1570614346616,
   "simulator-orientation": false,
   "simulator-resolution": {
     "height": 640,
     "width": 960
   },
+  "start-scene": "current",
   "use-customize-simulator": true,
   "use-project-simulator-setting": false
 }
