--- a/settings/project.json
+++ b/settings/project.json
@@ -11,6 +11,9 @@
       true,
       true,
       true,
+      true,
+      null,
+      null,
       true
     ],
     [
@@ -39,6 +42,15 @@
       false,
       false,
       false
+    ],
+    [
+      false,
+      true,
+      false,
+      false,
+      false,
+      false,
+      false
     ]
   ],
   "design-resolution-height": 640,
@@ -62,15 +74,15 @@
     "ground",
     "enemy",
     "game",
-    "background"
+    "background",
+    "tutorial"
   ],
-  "last-module-event-record-time": 1570614346616,
+  "last-module-event-record-time": 1571285034094,
   "simulator-orientation": false,
   "simulator-resolution": {
     "height": 640,
     "width": 960
   },
-  "start-scene": "current",
   "use-customize-simulator": true,
   "use-project-simulator-setting": false
 }
